# mcp-canteen-server

./: .gitattributes  .gitignore  LICENSE  README.md  canteen.py  pyproject.toml
src/mcp_server_canteen/: __init__.py  server.py
