[project]
name = "mcp-server-canteen"
version = "0.2.5"
description = "MCP Server for Canteen Data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "canteen", "api"]


dependencies = [
    "httpx>=0.24.0",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-server-canteen = "mcp_server_canteen:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_canteen"]
